third_party/WebKit/Source/core/layout/LayoutTextControlSingleLine.cpp
@@ -218,7 +218,7 @@ void LayoutTextControlSingleLine::CapsLockStateMayHaveChanged() {
   if (LocalFrame* frame = GetDocument().GetFrame())
     should_draw_caps_lock_indicator =
         InputElement()->type() == InputTypeNames::password &&
-        frame->Selection().IsFocusedAndActive() &&
+        frame->Selection().FrameIsFocusedAndActive() &&
         GetDocument().FocusedElement() == GetNode() &&
         KeyboardEventManager::CurrentCapsLockState();
 
